doc: manual instruction steps to clean, build, start service in markdown